--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.bg-black {
+  background-color: #1e2028;
+ }
+ .bg-white {
+  background-color: #fafbf6;
+ }
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
